--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 <div class="wrapper">
   
-  <h2>I Love Chu ! I apologise For All My Mistake , Forgive Me My Pookie !</h2>
+  <h2>I Love Chu ! I apologise For All My Mistake !</h2>
+	<h3>Please Forgive Me My Pookie </h3>
   
   <div class="pikachu">
     
