--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div class="wrapper">
   
-  <h2>I Love Chu ! I apologise For All My Mistake !</h2> <br><br><br><br><br><br><br>
-	<h2>Please Forgive Me My Pookie </h2>
+  <h2>I Love Chu 😘 ! I apologise For All My Mistake 🥺!</h2> <br><br><br><br><br><br><br>
+	<h2>Please Forgive Me My Pookie 🍀! </h2>
   
   <div class="pikachu">
     
