--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="signature">
-	<p> Me <i class="much-heart"></i> And <a href="https://codepen.io/AngelaVelasquez">You only</a></p>
+	<p> Me <i class="much-heart"></i> And <a href="#">You only</a></p>
 </div>
   <script src="script.js"></script>
 </body>
